--- a/sass/style.scss
+++ b/sass/style.scss
@@ -181,13 +181,45 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: #faf8ee;
+    width: 100%;
+}
+
+.portfolio h2 {
+    font-size: 56px;
+    font-family: $font-title;
+    margin-bottom: 0;
+}
+
+.portfolio h4 {
+    font-size: 18px;
+    font-family: $font-text;
+    margin-top: 0;
+    margin-bottom: 96px;
+    color: grey;
 }
 
 .portfolio .card {
     text-align: center;
+    background: white;
+}
+
+.portfolio .card-body h3 {
+    font-family: $font-title;
+    padding-top: 15px;
+    margin: 0;
+}
+
+.portfolio .card-body p {
+    font-size: 18px;
+    color: grey;
+    padding-bottom: 15px;
+    margin-top: 3px;
+    margin-bottom: 0;
 }
 
 .portfolio .card-image img {
-    width: 70%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
