--- a/sass/style.scss
+++ b/sass/style.scss
@@ -111,8 +111,10 @@ header {
     color: white;
     background: #f3dc09;
     font-size: 24px;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: $transition2;
 }
 
 /* Services */
@@ -219,8 +221,75 @@ header {
     margin-bottom: 0;
 }
 
+.portfolio .card-image {
+    overflow: hidden;
+}
+
 .portfolio .card-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: $transition2;
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    background: white;
+    width: 100%;
+}
+
+footer p {
+    width: 20%;
+    margin-left: 20%;
+    font-family: $font-text;
+    font-size: 15px;
+}
+
+footer span {
+    font-size: 0;
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+footer ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    font-size: 20px;
+    border-radius: 90%;
+    width: 40px;
+    height: 40px;
+    margin: 28px 10px;
+    background: black;
+    text-align: center;
+    transition: $transition2;
+}
+
+footer ul li:hover {
+    transform: scale(1.2);
+    transition: $transition2;
+}
+
+footer ul li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+  
+footer ul li i {
+    color: white;
 }
