--- a/sass/style.scss
+++ b/sass/style.scss
@@ -117,6 +117,7 @@ header {
     transition: $transition2;
 }
 
+
 /* Services */
 
 .services {
@@ -229,6 +230,11 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: $transition2;
+}
+
+.portfolio .card-image img:hover {
+    transform: scale(1.1);
     transition: $transition2;
 }
 
