--- a/sass/style.scss
+++ b/sass/style.scss
@@ -117,6 +117,15 @@ header {
     transition: $transition2;
 }
 
+.splash button:hover {
+    background: rgb(211, 179, 0);
+    transition: $transition2;
+}
+
+.splash button:active {
+    background: rgb(150, 127, 0);
+    transition: $transition2;
+}
 
 /* Services */
 
