--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,7 @@ $color-background: #FCF6C5;
 $font-brand: 'Lobster', sans-serif;
 $font-title: 'Oswald', sans-serif;
 $font-text: 'Lora', serif;
-$transition: all 0.7s;
+$transition: all 0.2s;
 $transition2: all 0.3s;
 
 /* Global */
@@ -56,7 +56,7 @@ header {
 
 .navigation .brand-logo {
     font-family: $font-brand;
-    font-size: 32px;
+    font-size: 40px;
     color: gold;
 }
 
@@ -69,6 +69,15 @@ header {
 
 .nav-options ul li {
     margin-right: 36px;
+}
+
+.nav-options ul li a {
+    transition: $transition;
+}
+
+.nav-options ul li a:hover {
+    color: gold;
+    transition: $transition;
 }
 
 
